--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
+    "@sanity/cli": "^2.35.0",
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "daisyui": "^2.38.1",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
     "react-simple-typewriter": "^4.0.5",
     "sass": "^1.56.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "mongoose": "^6.7.2",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
   }
