--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3",
     "react-simple-typewriter": "^4.0.5",
+    "react-toastify": "^9.1.1",
     "sass": "^1.56.0"
   },
   "devDependencies": {
